# Interview-CheatSheet

./: .env  .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
database/: company_any.txt  self_intro.txt
src/: gui.py  llm_processor.py  stt.py
